--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
-<html>
-    <body>
-        <h1>test</h1>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Protected Page</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 2rem;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <h1>🎉 Welcome to the Protected Content</h1>
+  <p>This content is protected using Netlify's Basic Auth.</p>
+</body>
 </html>
